style: fix chrome & edge scrollbar

--- a/src/assets/styles/base.scss
+++ b/src/assets/styles/base.scss
@@ -90,3 +90,15 @@ body,
   width: 100%;
   height: 100%;
 }
+
+/* 滚动条 */
+@supports (-webkit-appearance: none) {
+  body {
+    overflow: hidden;
+  }
+}
+@-moz-document url-prefix() {
+  * {
+    scrollbar-width: thin;
+  }
+}
